--- a/exerciciosjs/exercicios.html
+++ b/exerciciosjs/exercicios.html
@@ -11,13 +11,13 @@
 <body>
     <h1>Exercicios transcrito para o Javascript</h1>
     <br/>
-    <h3>1. Crie um programa que solicite a velocidade de um carro e apresente a mensagem Multado</h3>
+    <h3>1. Crie um programa que solicite a velocidade de um carro e apresente a mensagem Multado, caso a velocidade seja maior que 80.</h3>
     <br/>
     <input type="number" id="inputVelocidadeMultado"><input>
     <button onclick="velocidadeMultado(70)">Exercicios 1 - Radar</button>
     <br/>
 
-    <h2>2. Crie um programa que solicite o nome, a nota 1 e a nota 2 de um aluno. Em seguida </h2>
+    <h2>2. Crie um programa que solicite o nome, a nota 1 e a nota 2 de um aluno. Em seguida o programa deve calcular a media aritmetica e, se o aluno ficar com nota maior ou igual a 60, o programa deve mostrar a mensagem "APROVADO". Se a nota for menor que 60 o programa deve apresentar a mensagem "Em RECUPERAÇAO".  </h2>
     <br/>
     <label>Digite seu nome</label>
     <input type="text" id="txtEx2Nome">
@@ -46,6 +46,15 @@
     <br/>
     <br/>
 
-    <h4>4.</h4>
+    <h4>4.Crie um programa para uma loja de sucos. O preço de cada suco é R$5.50, porem, se o cliente comprar mais que 10 sucos, o preço individual passa para R$4.50 . O programa deve solicitar a quantidade de sucos desejados pelo cliente e apresentar o preço final a ser pago.</h4>
+        
+
+    <h5> 5.Crie um programa para gerenciar uma fila de atendimento. O programa deve perguntar se a pessoa precisa de atendimento prioritario ou não. Se for respondido "sim" , o programa deve mostrar a mensagem "Vá para os caixas 1, 2 e 3". Caso contrario deve mostrara mensagem "Vá para qualquer caixa, exceto os 1, 2 e 3 que são prioritario"</h5>
+
+
+    <h6>6.Crie um programa para calcular e informar se compensa mais abastecer um automovel com gasolina ou com etanol. O programa deve solicitar ao usuario o preço da gasolina e, em seguinda o preço do etanol. Feito isso voçê deve dividir o valor do etanol pelo preço da gasolina. Se o resultado for maior ou igual a 0.7, o programa deve apresentar a mensagem "Compensa abastecer com gasolina". Caso contrario, o programa deve apresentar a mensagem "Compensa abastecer com etanol".</h6>
+
+
+    <h6> Crie um programa que solicite um numero inteiro e apresente se ele é positivo ou negativo.</h6>
 </body>
 </html>
